Removed some unnecessary local variable assignments.